Correcte input display on mobile

--- a/src/app/cocktail/cocktail-list/cocktail-list.component.scss
+++ b/src/app/cocktail/cocktail-list/cocktail-list.component.scss
@@ -4,6 +4,9 @@
     gap: 0.6rem;
     padding: 0.6rem;
 }
-input{
-    margin-left: 0.6rem;
-}
+
+@media (width >= 600px) {
+    .filter {
+        margin-left: 0.6rem;
+    }
+  }
